ENG-1184: Fix messages and validation for entity types

--- a/admin-console/src/main/java/com/agiletec/apsadmin/system/entity/package_en.properties
+++ b/admin-console/src/main/java/com/agiletec/apsadmin/system/entity/package_en.properties
@@ -69,7 +69,7 @@ note.entityAdmin.entityTypes.attribute.disablingCodes.summary=The table shows th
 
 note.entityTypes.editType.intro.1=Here''s all the informations needed to build an entity type
 note.entityTypes.editType.intro.2=All the fields are mandatory.
-note.jacmsContentManager.code=You can insert max 10 characters uppercase and lowercase letters, including numbers and ''_'' special characters.
+note.jacmsContentManager.code=You must insert 3 uppercase characters
 note.jacmsContentManager.name=You can insert max 50 characters uppercase and lowercase letters, including numbers and special characters
 note.entityTypes.deleteType.references=objects to be deleted before deleting the entity type itself.
 note.entityTypes.deleteType.references.outro=Here come the codes of all those objects
