--- a/admin-console/src/main/java/com/agiletec/apsadmin/system/entity/package_it.properties
+++ b/admin-console/src/main/java/com/agiletec/apsadmin/system/entity/package_it.properties
@@ -82,7 +82,7 @@ note.entityAdmin.entityTypes.indexes.intro=Quando vengono modificati i Tipi di E
 #label with manager code (to add for new manager of entities)
 note.jacmsContentManager.intro.1=Puoi creare, modificare, o eliminare un Tipo di Contenuto. Dalla apposita colonna puoi inoltre sia controllare lo stato delle Referenze che, se necessario, lanciare il loro aggiornamento.
 note.jacmsContentManager.intro.2=Di seguito troverai tutte le informazioni che contribuiscono a comporre un Tipo di Profilo.
-note.jacmsContentManager.code=Puoi inserire un massimo di 10 caratteri, lettere maiuscole e minuscole, numeri, ed il carattere speciale ''_''
+note.jacmsContentManager.code=Il Codice deve essere una stringa di 3 lettere maiuscole.
 note.jacmsContentManager.name=Puoi inserire un massimo di 50 caratteri, lettere maiuscole e minuscole, numeri, ed i caratteri speciali
 note.jacmsContentManager.empty=Nessun Tipo di Contenuto definito
 note.entityAdmin.jacmsContentManager.references= Quando vengono modificati i Tipi di Contenuto &agrave; necessario aggiornare le referenze.
@@ -98,5 +98,5 @@ title.DataObjectManager.menu=<li>Data</li>
 title.DataObjectManager.management=Data Type
 note.entityAdmin.DataObjectManager.references=Le referenze per i seguenti Tipi di Entit&agrave; hanno bisogno di essere ricaricate
 note.DataObjectManager.empty=Non ci sono DATA TYPE disponibili
-note.DataObjectManager.code=Il codice è valido solo se composto da 3 lettere maiuscole
+note.DataObjectManager.code=Il codice &egrave; valido solo se composto da 3 lettere maiuscole
 note.DataObjectManager.name=Puoi inserire un massimo di 50 caratteri, lettere maiuscole e minuscole, numeri, ed i caratteri speciali
