ENG-1184: Improvement of validation of category titles

--- a/admin-console/src/main/java/com/agiletec/apsadmin/category/package_en.properties
+++ b/admin-console/src/main/java/com/agiletec/apsadmin/category/package_en.properties
@@ -48,5 +48,6 @@ error.category.deleteWithChildren.notAllowed=Sorry. You can''t delete a category
 #VALIDATOR'S LABELS
 categoryCode=Category code
 error.category.insertTitle=Please provide a category title in ''{0}''
+error.category.title.wrongTitleLength=Title in ''{0}'' is longer than {1} characters
 error.category.duplicateCode=A category with the code ''{0}'' already exists
 error.category.noParentSelected=No parent category selected!
