ENG-1184: Unified validation of category titles with page title (label and max length)

--- a/admin-console/src/main/java/com/agiletec/apsadmin/category/package_it.properties
+++ b/admin-console/src/main/java/com/agiletec/apsadmin/category/package_it.properties
@@ -48,6 +48,6 @@ error.category.deleteWithChildren.notAllowed=Non &egrave; consentita l''eliminaz
 #VALIDATOR'S LABELS
 categoryCode=Codice Categoria
 error.category.insertTitle=Titolo per lingua ''{0}'' &egrave; richiesto
-error.category.title.wrongTitleLength=Titolo per lingua ''{0}'' eccede la lunghezza massima consentita di {1} caratteri
+error.category.title.wrongTitleLength=Il campo Titolo (''{0}'') ha pi&ugrave; di ''{1}'' caratteri
 error.category.duplicateCode=Codice categoria ''{0}'' gi&agrave; presente
 error.category.noParentSelected=Nessuna categoria padre selezionata!
